sign 수정, mypage 추가

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -38,3 +38,27 @@
     color: crimson;
     font-size: 25px;
 }
+
+.menu-container {
+  position: absolute;
+  top: 60px; /* 아이콘 바로 아래에 위치하도록 조정 */
+  right: 10px;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  z-index: 999;
+}
+
+.menu-container p {
+  margin: 0;
+  padding: 8px 0;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.menu-container p:hover {
+  color: #007bff;
+  font-weight: bold;
+}
