--- a/src/css/Sign.css
+++ b/src/css/Sign.css
@@ -52,3 +52,27 @@
 .signForm button:hover {
   background-color: #0056b3;
 }
+
+.signin-container {
+  display: flex;
+  justify-content: center; /* 가로 가운데 정렬 */
+  gap: 20px;               /* 링크 사이 간격 */
+  margin-top: 20px;
+}
+
+.custom-link {
+  text-decoration: none; /* 기존 밑줄 제거 */
+  border-bottom: 1px solid white; /* 밑줄처럼 보이게 */
+  padding-bottom: 2px; /* 밑줄과 글자 사이 간격 */
+  transition: border-color 0.3s;
+  color: black;
+}
+
+.custom-link:hover {
+  border-bottom-color: #0056b3;
+  cursor: pointer;
+}
+
+.oauthLogin {
+  margin-top: 10px;
+}
