--- a/src/css/PostForm.css
+++ b/src/css/PostForm.css
@@ -1,7 +1,7 @@
 /* 전체 폼 컨테이너 */
 .form-container {
   padding: 40px 150px;
-  background-color: ghostwhite;
+  background-color: #F9FAFB;
   display: flex;
   justify-content: center;
 }
@@ -42,17 +42,20 @@
 
 /* 작은 input (숫자용) */
 .input.small {
-  width: 30%;
+  flex: 1; /* select보다 좁게 */
+  min-width: 60px;
+  padding: 10px;
+  font-size: 14px;
 }
 
 /* 공통 select */
 .select {
-  width: 51%;
-  padding: 12px;
+  flex: 2; /* 비율로 공간 차지 */
+  min-width: 100px;
+  padding: 10px;
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  box-sizing: border-box;
 }
 /* 한 줄짜리 라벨+입력 UI */
 .row {
@@ -72,26 +75,8 @@ width: 100%;
 
 .editor-buttons {
   display: flex;
-  gap: 12px;
   padding: 10px;
   background: #f8f8f8;
-  border-top: 1px solid #ddd;
-}
-
-/* 버튼 스타일 */
-.form-container button {
-  padding: 8px 8px;
-  font-size: 16px;
-  color: black;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  background-color: transparent;
-  transition: background-color 0.2s;
-}
-
-.form-container button:hover {
-   color: #5D5FEF;
 }
 
 /* 스택 섹션 */
@@ -113,9 +98,13 @@ width: 100%;
   font-size: 0.9rem;
   color: #555;
 }
-.memberLabel .row{
-    gap: 15px;
-    margin-bottom: 5px;
+
+.memberLabel .row {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: nowrap; 
+  width: 100%;
 }
 
 .project-type-row {
@@ -127,35 +116,18 @@ width: 100%;
   width: 49%;
 }
 
-#submitBtn {
-  background-color: #5D5FEF;
-  color: white;
-  padding: 10px 20px;
-  margin-top: 5%;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-#submitBtn:hover {
-  background-color: #4345d8;
-  transform: scale(1.03); 
-}
-
-#cancleBtn {
-  color: black;
-  padding: 10px 20px;
-  margin-top: 5%;
-  background-color: #ddd;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-#cancleBtn:hover {
-  background-color: #ccc;
-  transform: scale(1.03);
-}
-
 .btmBtn-container {
    display: flex;
   justify-content: flex-end; 
   gap: 10px; 
-  margin-top: 20px;
+  margin-top: 7%;
+}
+
+.toastui-editor-defaultUI {
+  height: 100% !important; 
+}
+
+.memberLabel #graBtn {
+  flex: 0;
+  white-space: nowrap;
 }
